# BiblioGrant

./: README.md  pyproject.toml
BiblioGrant/: __init__.py  __main__.py
Examples/: Examples.ipynb  WG.bib  WG.txt
